# krx-rs

./: Cargo.toml  README.md
src/: main.rs
src/connections/constants/: krx_connection.rs  mod.rs
src/connections/structs/: multicast.rs
src/market_data/: data_handler.rs  filter_list.rs  mod.rs  prelude.rs
src/market_data/constants/: company_code.rs  data_classifier.rs  mod.rs
src/market_data/structs/: kosdaq_future_order_board.rs  kospi_big_future_order_board.rs  mod.rs  stock_order_board.rs  stock_order_board_include_lp.rs
src/market_data/traits/: market_snapshot.rs  mod.rs  parser.rs
src/server/: udp.rs
