[package]
name = "krx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
atoi = "1.0"
lexical = "6.1.1"

tokio = { version = "1.20", features = ["full"] }